[package]
name = "uo-keyboard"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
rupantor = "0.3.0"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-etw = "0.2.2"
tracing-panic = "0.1.2"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_Graphics",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_System_Kernel",
  "Win32_System_LibraryLoader",
  "Win32_System_Ole",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_System_Variant",
  "Win32_System_WindowsProgramming",
  "Win32_UI_Input",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_TextServices",
  "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.62.2"
windows-registry = "0.6.1"

[build-dependencies]
winres = "0.1.12"
